# tfm-carla-ros2-bridge

./: .gitignore  .gitmodules  README.md  docker-compose.yml
configs/: foxglove_layout.json
docker/carla_ros2_bridge/: Dockerfile  entrypoint.sh
docker/carla_server/: Dockerfile
docker/custom_carla_bridge/: Dockerfile  entrypoint.sh
docker/data_collector/: Dockerfile  entrypoint.sh
docker/foxglove_bridge/: Dockerfile  entrypoint.sh
docker/tfm_carla_data_collector/: Dockerfile  entrypoint.sh
docker/vehicle_inference/: Dockerfile
scripts/: compile.sh
src/custom_carla_bridge/: package.xml  setup.cfg  setup.py
src/custom_carla_bridge/custom_carla_bridge/: carla_connector.py  carla_ros_node.py
src/custom_carla_bridge/launch/: bridge.launch.py
src/custom_interfaces/: CMakeLists.txt
src/custom_interfaces/msg/: VehicleControl.msg
src/data_collector/: package.xml  setup.py
src/data_collector/data_collector/: data_collector_node.py  dataset_creator.py
src/data_collector/launch/: data_collector.launch.py
src/tfm_carla_data_collector/: package.xml  requirements.txt  setup.cfg  setup.py
src/tfm_carla_data_collector/srv/: SetDataCollection.srv
src/tfm_carla_data_collector/tfm_carla_data_collector/: data_collector.py
src/vehicle_inference/: package.xml  setup.cfg  setup.py
src/vehicle_inference/launch/: vehicle_inference.launch.py
src/vehicle_inference/vehicle_inference/: filters.py  model.py  steering_inference.py
